update code keep_tile works in multi-process

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -3,21 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Preprocessing\n",
-    "https://notebook.community/fschueler/incubator-systemml/projects/breast_cancer/Preprocessing"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "## Setup"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "source": [
     "import math\n",
     "import os\n",
@@ -36,6 +28,10 @@
     "# from tqdm import tqdm\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
+    "import multiprocessing\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "\n",
     "plt.rcParams['figure.figsize'] = (10, 6)"
    ],
    "outputs": [],
@@ -50,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "source": [
     "def open_slide(slide_num, folder):\n",
     "    '''画像番号を指定してWSIを開く\n",
@@ -77,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "source": [
     "def create_tile_generator(slide, tile_size=1024, overlap=0):\n",
     "    '''WSIからタイル画像を抽出するためのgeneratorを生成する\n",
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "source": [
     "def get_20x_zoom_level(slide, generator):\n",
     "    '''20倍に相当するzoom levelを返す\n",
@@ -147,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "source": [
     "def process_slide(slide_num, folder, tile_size=1024, overlap=0):\n",
     "    '''WSIに対して可能な全てのタイル画像のインデックスを生成\n",
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "source": [
     "def process_tile_index(tile_index, folder):\n",
     "    '''タイルインデックスからタイル画像を生成\n",
@@ -225,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "source": [
     "def keep_tile(tile_tuple, tile_size=1024, tissue_threshold=0.9):\n",
     "    '''タイル画像を残すかどうか判断する\n",
@@ -285,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "source": [
     "def process_tile(tile_tuple, sample_size=256, grayscale=False):\n",
     "    '''タイル画像をより小さな画像に加工する\n",
@@ -336,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "source": [
     "def visualize_tile(tile):\n",
     "    '''タイル画像をプロットする\n",
@@ -359,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "source": [
     "def visualize_sample(sample, size=256):\n",
     "    '''画像サンプルをプロットする\n",
@@ -386,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "source": [
     "def get_file_name(slide_num, folder):\n",
     "    '''ファイル名を取得\n",
@@ -402,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "source": [
     "def make_dirs(output_dir, slide_name):\n",
     "    '''保存用のディレクトリを作成\n",
@@ -415,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "source": [
     "def save_jpeg_images(sample, sample_num, slide_name):\n",
     "    '''flattenされたvectorから画像をjpegで保存\n",
@@ -438,6 +434,23 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def get_file_name(slide_num, folder):\n",
+    "    '''ファイル名を取得\n",
+    "    :return 拡張子を除いたファイル名\n",
+    "    '''\n",
+    "    slide_names = os.listdir(folder)\n",
+    "    filename = slide_names[slide_num].split('.')\n",
+    "\n",
+    "    # 拡張子はいらない\n",
+    "    return filename[0]\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Process All Slides And Save"
@@ -446,10 +459,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "source": [
     "def process(slide_num, folder=slide_dir, output_dir=output_dir, tile_size=1024, over_lap=0, tissue_threshold=0.9, sample_size=256, grayscale=False):\n",
-    "    print('Process start....')\n",
+    "    # ファイル名を取得\n",
+    "    slide_name = get_file_name(slide_num, folder)\n",
+    "\n",
+    "    # WSIに対して可能な全てのタイル画像のインデックスを生成\n",
+    "    print(f'Process start....: [u]{slide_name}[/u]')\n",
+    "\n",
     "    # WSIに対して可能な全てのタイル画像のインデックスを生成\n",
     "    tile_idx = process_slide(slide_num, folder, tile_size, over_lap)\n",
     "\n",
@@ -459,7 +477,9 @@
     "\n",
     "    print('Filtering a tile image....')\n",
     "    # タイル画像のフィルタリング\n",
-    "    filtered_tiles = list(filter(lambda tile: keep_tile(tile, tile_size, tissue_threshold), tqdm(tiles)))\n",
+    "    # filtered_tiles = list(filter(lambda tile: keep_tile(tile, tile_size, tissue_threshold), tqdm(tiles)))\n",
+    "    with Pool(multiprocessing.cpu_count()) as pool:\n",
+    "        filtered_tiles = [i for i, keep in zip(tiles, pool.map(keep_tile, tqdm(tiles))) if keep]\n",
     "\n",
     "    # タイル画像をより小さなタイル画像にする\n",
     "    samples = [n for i in filtered_tiles for n in process_tile(i, sample_size, grayscale)]\n",
@@ -481,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "source": [
     "slide_dir = '../input/'\n",
     "output_dir = '../output/'"
@@ -491,91 +511,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "source": [
     "process(2)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Process start....\n",
-      "Generate tiled image from index....\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1972), HTML(value='')))"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "dd9afe00153f431c9aa10af2ba44d5ae"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n",
-      "Filtering a tile image....\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1972), HTML(value='')))"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "4357fd657c104776af1df05ad29f7162"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n",
-      "Saving Tile Images....\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=12800), HTML(value='')))"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "169bdeb416954c2ba5ef5ba33bf63244"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
